--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "next": "^15.0.2",
         "react": "^19.0.0-rc-603e6108-20241029",
         "react-dom": "^19.0.0-rc-603e6108-20241029",
+        "react-lottie": "^1.2.10",
         "swr": "^2.2.5"
     },
     "devDependencies": {
@@ -29,6 +30,7 @@
         "@types/node": "^20",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
+        "@types/react-lottie": "^1.2.10",
         "dotenv": "^16.4.5",
         "eslint": "^8",
         "eslint-config-next": "^15.0.2",
