--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "lucide-react": "^0.474.0",
         "next": "^15.0.2",
         "react": "^19.0.0-rc-603e6108-20241029",
