--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "test": "jest"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "js-cookie": "^3.0.5",
