--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "@heroicons/react": "^2.2.0",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
+        "form-data": "^4.0.4",
         "js-cookie": "^3.0.5",
         "lucide-react": "^0.474.0",
         "next": "^15.0.2",
+        "node-fetch": "^2.7.0",
         "react": "^19.0.0-rc-603e6108-20241029",
         "react-dom": "^19.0.0-rc-603e6108-20241029",
         "react-lottie": "^1.2.10",
