--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "node-fetch": "^2.7.0",
         "react": "^19.0.0-rc-603e6108-20241029",
         "react-dom": "^19.0.0-rc-603e6108-20241029",
+        "react-hot-toast": "^2.6.0",
         "react-lottie": "^1.2.10",
         "swiper": "^11.2.10",
         "swr": "^2.2.5"
