--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
+        "canvas-confetti": "^1.9.4",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "form-data": "^4.0.4",
@@ -33,6 +34,7 @@
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
+        "@types/canvas-confetti": "^1.9.0",
         "@types/jest": "^29.5.13",
         "@types/js-cookie": "^3.0.6",
         "@types/node": "^20",
